--- a/test/test.csproj
+++ b/test/test.csproj
@@ -83,6 +83,7 @@
     <Compile Include="NowyProfil.xaml.cs">
       <DependentUpon>NowyProfil.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Profile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
     </Compile>
